// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Value component Renders search element 1`] = `
<div
  className="value"
>
  <input
    autoFocus={false}
    className="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={null}
    tabIndex={0}
    value="Foo"
  />
</div>
`;

exports[`Test Value component Renders value element 1`] = `
<div
  className="value"
>
  <input
    autoFocus={false}
    className="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    tabIndex={0}
    value="Foo"
  />
</div>
`;
